Adequacao nos templates

--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
     <script type="text/javascript" src="js/jsrender.min.js"></script>
 
     <script type="text/javascript" src="js/domain/refeicoes.js"></script>
+    <script type="text/javascript" src="js/fn.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
 
