--- a/src/www/index.html
+++ b/src/www/index.html
@@ -2,12 +2,16 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="mobileui/style.css">
+
     <meta name="format-detection" content="telephone=no">
     <meta charset="utf-8">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+
     <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="mobileui/style.css">
+    <link rel="stylesheet" type="text/css" href="css/timepicki.css">
     <title>My Diet</title>
 </head>
 
@@ -19,14 +23,15 @@
         <button class="icon text-indigo ion-android-restaurant" onclick="openTab('tabRefeicoes')">Refeições</button>
     </div>
     <div class="tab-content active padding" id="tabDiario"></div>
-    <div class="tab-content padding" id="tabAlimentos"></div>
+    <div class="tab-content padding" id="tabAlimentos"><button class="green" onclick="openPage('contacts')">Go to a new Page</button></div>
     <div class="tab-content pading" id="tabRefeicoes"></div>
 
 
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="mobileui/mobileui.js"></script>
     <script type="text/javascript" src="js/lib/jquery-3.4.0.min.js"></script>
-    <script type="text/javascript" src="js/lib/jsrender.min.js"></script>
+    <script type="text/javascript" src="js/lib/timepicki.js"></script>
+    <script type="text/javascript" src="js/lib/jsviews.min.js"></script>
     <script type="text/javascript" src="js/lib/moment-with-locales.min.js"></script>
 
     <script type="text/javascript" src="js/domain.js"></script>
